<resources>
    <string name="app_name">Quizland</string>
    <string name="start">Старт</string>
    <string name="_1">1</string>
    <string name="back">Назад</string>
    <string name="_2">2</string>

    <string name="exercise_level1">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level2">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level3">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level4">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level5">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level6">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level7">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level8">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level9">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="exercise_level10">Выберите число, которое больше. Вопросы можно повторять, пока вы не наберете 20 баллов</string>

    <string name="interesting_fact_level1">"Поздравляем, вы завершили уровень!\nРазные культуры открывали ноль в разное время. Идея нуля как числа была изобретена по всему миру в разные периоды истории. Несмотря на столь разрозненное использование, общепризнано, что индийский астроном и математик Брахмагупта впервые ввел понятие нуля около 600 года нашей эры."</string>

    <string name="interesting_fact_level2">"Поздравляем, вы завершили уровень!\n Знаете ли вы, что число 1 — это самое первое число, которое мы учим? Оно символизирует единство и начало. Если у вас есть один яблоко, это значит, что у вас есть целое яблоко! А если у вас есть два яблока, то это уже больше одного. Число 1 также используется в математике, чтобы показать, что что-то существует. Например, если у вас есть один друг, это значит, что у вас есть друг!"</string>

    <string name="interesting_fact_level3">"Поздравляем, вы завершили уровень!\n Знаете ли вы, что число 2 — это первое четное число? Четные числа делятся на 2 без остатка. Например, 2, 4, 6 и так далее. Четные числа часто встречаются в повседневной жизни, например, в паре обуви!"</string>

    <string name="interesting_fact_level4">"Поздравляем, вы завершили уровень!\n Число 3 — это первое нечетное число. Нечетные числа не делятся на 2 без остатка. Примеры нечетных чисел: 1, 3, 5, 7 и 9. Знаете ли вы, что треугольник имеет три стороны?!"</string>

    <string name="interesting_fact_level5">"Поздравляем, вы завершили уровень!\n Число 4 — это первое число, которое имеет больше двух делителей: 1, 2 и 4. Четыре — это также количество углов в квадрате. Квадрат — это форма, которую мы видим повсюду!"</string>

    <string name="interesting_fact_level6">"Поздравляем, вы завершили уровень!\n Число 5 — это первое число, которое является половиной десяти. У нас есть пять пальцев на одной руке, и это число часто используется в играх и соревнованиях!"</string>

    <string name="interesting_fact_level7">"Поздравляем, вы завершили уровень!\n Число 6 — это первое совершенное число. Совершенное число — это число, которое равно сумме своих делителей, исключая само число. Например, 1 + 2 + 3 = 6!"</string>

    <string name="interesting_fact_level8">"Поздравляем, вы завершили уровень!\n Число 7 — это число удачи для многих людей. В математике 7 — это простое число, что означает, что оно делится только на 1 и на само себя. Существует много мифов и легенд о числе 7!"</string>

    <string name="interesting_fact_level9">"Поздравляем, вы завершили уровень!\n Число 8 — это первое кубическое число, которое мы встречаем. Кубическое число — это число, которое получается, когда мы умножаем его само на себя дважды. Например, 2 * 2 * 2 = 8. В природе число 8 часто ассоциируется с бесконечностью, так как его форма напоминает знак бесконечности!"</string>

    <string name="interesting_fact_level10">"Поздравляем, вы завершили уровень!\n Число 9 — это самое большое однозначное число. Оно также имеет интересное свойство: если вы умножите любое число на 9 и сложите все цифры результата, то сумма всегда будет равна 9 или кратна 9. Например, 9 * 3 = 27, а 2 + 7 = 9. Это делает число 9 особенным в математике!"</string>


    <string name="level_1">Уровень 1</string>
    <string name="level_2">Уровень 2</string>
    <string name="level_3">Уровень 3</string>
    <string name="level_4">Уровень 4</string>
    <string name="level_5">Уровень 5</string>
    <string name="level_6">Уровень 6</string>
    <string name="level_7">Уровень 7</string>
    <string name="level_8">Уровень 8</string>
    <string name="level_9">Уровень 9</string>
    <string name="level_10">Уровень 10</string>
    <string name="x">x</string>
    <string name="_continue">Продолжить</string>
</resources>